--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-static": "^5.0.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
-    "vuepress": "^1.9.7"
+    "vuepress": "^1.9.7",
+    "webpack": "^3.6.0"
   }
 }
